test/specs/generatefunctionconcept.js
describe('generate function',()=>{
    it('test operation', async()=>{
        // function* trial()
        // {
        //     yield 10
        //     yield 24


        // }
        // let p = trial()
        // console.log(p.next().value)//10
        // console.log(p.next().value)//24
        // console.log(p.next().value)//undefined

        //to understand WeakSet
        //const ws= new WeakSet([1,2,3])
           // console.log(ws)//error
        
        // const ws1 = new WeakSet([{message: 'Hi'}])
        // console.log(ws1)

        // let obj= {message:'Hello'}
        // const ws2 = new WeakSet([obj])
        // console.log(ws2.has(obj))//true

    })
})